@@ -1,3 +1,15 @@
+2007-10-15  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-util.el (gnus-string<): New function.
+
+	* gnus-sum.el (gnus-article-sort-by-author)
+	(gnus-article-sort-by-subject): Use it.
+
+2007-10-15  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-win.el (gnus-configure-windows): Focus on the frame for which
+	the frame-focus tag is set in gnus-buffer-configuration.
+
 2007-10-08  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* mm-util.el (mm-charset-synonym-alist): Alias gbk to cp936.
